# glzx-xmt

./: .coverage  .env  .env.example  Dockerfile  PHOTO_MIGRATION_REPORT.md  README.md  README_DEPENDENCIES.md  README_REFACTOR.md  app.py  app_test.py  docker-compose.yml  pyproject.toml  requirements.txt  test_watermark.py  watermark_cache.py  协议（投稿+投票）.docx
.qoder/quests/: campus-photography-optimization.md  project-optimization-refactor-1758012727.md  project-optimization-refactor.md
.qoder/repowiki/zh/content/: 快速入门指南.md  技术栈与依赖.md  测试策略与验证.md  项目概述.md
.qoder/repowiki/zh/content/API接口参考/: API接口参考.md  投票系统接口.md  照片管理接口.md  用户相关接口.md  管理员管理接口.md  系统设置与安全接口.md
.qoder/repowiki/zh/content/安全机制与风控策略/: 安全机制与风控策略.md  数据安全与隐私保护.md  身份认证与权限控制.md  风控与防刷机制.md
.qoder/repowiki/zh/content/扩展点与二次开发/: 扩展点与二次开发.md  水印功能扩展.md
.qoder/repowiki/zh/content/数据模型与数据库设计/: 协议模型 (Agreement).md  安全与风控模型.md  投票模型 (Vote).md  数据模型与数据库设计.md  (+3 more)
.qoder/repowiki/zh/meta/: repowiki-metadata.json
instance/: photos.db
src/: app.py  app_new.py  app_test.py  migrate.py  run.py
src/app/: __init__.py  routes.py
src/app/api/: admin.py  api.py  auth.py  photos.py
src/app/core/config/: base.py  performance.py  production.py
src/app/models/: base.py  photo.py  settings.py  user.py
src/app/services/: auth_service.py  cache_service.py  photo_service.py  security_service.py  vote_service.py
src/app/tasks/: auth_tasks.py  cache_tasks.py  security_tasks.py
src/app/utils/: db_utils.py  decorators.py
src/config/: base.py  production.py
src/instance/: photos.db
src/models/: base.py  photo.py  settings.py  user.py
src/routes/: admin.py  api.py  auth.py  photos.py
src/services/: auth_service.py  cache_service.py  photo_service.py  vote_service.py
src/tasks/: auth_tasks.py  cache_tasks.py  celery_app.py  image_tasks.py
src/utils/: db_utils.py  decorators.py  image_utils.py  performance.py
static/js/: agreement-modal.js
templates/: add_user.html  admin.html  admin_review.html  agreement_management.html  change_password.html  edit_agreement.html  index.html  ip_management.html  login.html  manage_users.html  my_photos.html  rankings.html  register.html  settings.html  upload.html  view_agreement.html  whitelist_management.html
(+28 files in other folders)
